[package]
name = "rasmalai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["serde"] }
parley = "0.7.0"
pollster = { version = "0.4.0", features = ["macro"] }
rune = "0.14.1"
taffy = "0.9.2"
vello = { version = "0.6.0", features = ["hot_reload"] }
wgpu = "26.0.1"
winit = "0.30.12"
